--- a/client/ChatClient/ChatClient.Droid/Properties/AndroidManifest.xml
+++ b/client/ChatClient/ChatClient.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="internalOnly" package="com.chat.board" android:versionCode="1" android:versionName="1.0.9">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.chat.board" android:versionCode="1" android:versionName="1.0.9">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="24" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
