--- a/client/ChatClient/ChatClient.Droid/packages.config
+++ b/client/ChatClient/ChatClient.Droid/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="MonoAndroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid60" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="MonoAndroid60" />
+  <package id="mixpanel-csharp" version="4.0.1" targetFramework="monoandroid70" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="MonoAndroid60" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="MonoAndroid60" />
   <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="MonoAndroid60" />
@@ -42,7 +43,7 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.1.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.1.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.Auth" version="1.3.2" targetFramework="MonoAndroid60" />
-  <package id="Xamarin.Build.Download" version="0.4.4" targetFramework="MonoAndroid70" />
+  <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid70" />
   <package id="Xamarin.Firebase.Common" version="42.1001.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.Firebase.Config" version="42.1001.0" targetFramework="MonoAndroid70" />
   <package id="Xamarin.Firebase.Iid" version="42.1001.0" targetFramework="MonoAndroid70" />
