--- a/client/ChatClient/Core/ChatClient.Core.Common/packages.config
+++ b/client/ChatClient/Core/ChatClient.Core.Common/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="sqlite-net-pcl" version="1.2.1" targetFramework="portable45-net45+win8+wp8+wpa81" requireReinstallation="true" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" requireReinstallation="true" />
-  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" requireReinstallation="true" />
+  <package id="sqlite-net-pcl" version="1.2.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Validation" version="2.2.8" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Auth" version="1.3.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="portable45-net45+win8+wp8+wpa81" />
